--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <footer>
         <ul>
-          <p>© 2023 صفحة الصور</p>
+          <p> صفحة مصلحة النشاطات العلمية والثقافية والرياضة © 2023</p>
         </ul>
     </footer>
   </body>
