2nd time fixing text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <h1 class="title">المدرسة الوطنية العليا للأشغال العمومية</h1>
       <h1 class="title">« فرنسيس جانسون »</h1>
       <h2 class="title">الأمـــــــانـــــــــة الـــــعــــامــــــــــــــــــــــــة</h2>
-      <h2 class="title">المديرية الفرعية للمستخدمين والتكوين مصلحة النشاطات العلمية والثقافية والرياضة</h2>
+      <h2 class="title">المديرية الفرعية للمستخدمين والتكوين</h2>
+      <h2 class="title">مصلحة النشاطات العلمية والثقافية والرياضة</h2>
     </div>
   </header>
   <nav>
@@ -27,7 +28,7 @@
   <div class="content">
       <h1>مقدمة</h1>
       <p>
-          فخلالها يتزود بالرصيد المعرفي والعلمي الذي يتلقاه في تكوينه ، كما تعتبر مرحلة مهمة في بناء شخصيته ، لذلك وجب تنمية البعد الوطني والإحساس بالانتماء وتقوية عناصر الوحدة الوطنية التي تعد من المهمات الأساسية للمدرسة باعتبارها كمؤسسة وطنية للتعليم العالي والتكوين.
+        الحياة الجامعية فترة مميزة في حياة الطالب ,فخلالها يتزود بالرصيد المعرفي والعلمي الذي يتلقاه في تكوينه ، كما تعتبر مرحلة مهمة في بناء شخصيته ، لذلك وجب تنمية البعد الوطني والإحساس بالانتماء وتقوية عناصر الوحدة الوطنية التي تعد من المهمات الأساسية للمدرسة باعتبارها كمؤسسة وطنية للتعليم العالي والتكوين.
       </p>
       <p>
           وتعتبر المدرسة الوطنية العليا للأشغال العمومية فضاء حيا للنشاطات الثقافية والعلمية والرياضية وفرصة لاكتشاف المواهب والإبداعات التي تزخر بها الشريحة الطلابية مما يستوجب تشجيعها وتوفير ظروف تنميتها من خلال برامج النشاطات والمنافسات والتبادلات التي تشرف على توجيهها الوزارة الوصية وتسهر عليها المصلحة من خلال تشكيل النوادي والفرق المتخصصة وتنظيم المسابقات والدوارات والمهرجانات المحلية والجهوية والوطنية والدولية في شتى المجالات.
