--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="title">« فرنسيس جانسون »</h1>
       <h2 class="title">الأمـــــــانـــــــــة الـــــعــــامــــــــــــــــــــــــة</h2>
       <h2 class="title">المديرية الفرعية للمستخدمين والتكوين</h2>
-      <h2 class="title">مصلحة النشاطات العلمية والثقافية والرياضة</h2>
+      <h2 class="title">مصلحة النشاطات الثقافية والرياضة</h2>
     </div>
   </header>
   <nav>
@@ -45,6 +45,9 @@
           <li>تنظيم ندوات ومحاضرات وأيام دراسية في مواضيع مختلفة.</li>
           <li>تنظيم الأنشطة الترفيهية.</li>
           <li>تنظيم معارض.</li>
+          <li>اقتراح برامج الأنشطة الثقافية والرياضية وترقيتها </li>
+          <li>وضع حيز التنفيذ برامج المنشاطات الثقافية و الرياضية</li>
+          <li>إنشاء النوادي العلمية نحي الثقافية</li>
           <li>تشجيع إبداعات الطلبة (المسرح، الرسم، الشعر، القصة، المجلة، الخط ...).</li>
       </ul>
       <h2>
