--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li>ترقية وتنمية الأنشطة العلمية والثقافية والرياضية في المدرسة لفائدة الطلبة.</li>
           <li>إحياء المناسبات الدينية والوطنية.</li>
           <li>دعم الأنشطة الرياضية في إطار الرياضة الجامعية.</li>
-          <li>إنشاء النوادي الثقافية والعلمية.</li>
+          <li>إنشاء النوادي العلمية.</li>
           <li>القيام بمسابقات ثقافية علمية رياضية.</li>
           <li>القيام بالتبادلات الثقافية بين مختلف الجامعات والمدارس.</li>
           <li>القيام برحلات استكشافية تهدف إلى التوأمة بين المؤسسات الأخرى.</li>
@@ -47,7 +47,6 @@
           <li>تنظيم معارض.</li>
           <li>اقتراح برامج الأنشطة الثقافية والرياضية وترقيتها </li>
           <li>وضع حيز التنفيذ برامج المنشاطات الثقافية و الرياضية</li>
-          <li>إنشاء النوادي العلمية نحي الثقافية</li>
           <li>تشجيع إبداعات الطلبة (المسرح، الرسم، الشعر، القصة، المجلة، الخط ...).</li>
       </ul>
       <h2>
