--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li>تنظيم الأنشطة الترفيهية.</li>
           <li>تنظيم معارض.</li>
           <li>اقتراح برامج الأنشطة الثقافية والرياضية وترقيتها </li>
-          <li>وضع حيز التنفيذ برامج المنشاطات الثقافية و الرياضية</li>
+          <li>وضع حيز التنفيذ برامج النشاطات الثقافية و الرياضية</li>
           <li>تشجيع إبداعات الطلبة (المسرح، الرسم، الشعر، القصة، المجلة، الخط ...).</li>
       </ul>
       <h2>
